--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -15,7 +15,7 @@ div.side-bar {
     width: 350px;
     height: 100%;
     border-right: 1px solid var(--mona-border-color);
-    background-color: var(--mona-background-dark);
+    background: #2C2C2C;
     padding: 20px 10px;
 }
 
