--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
@@ -14,8 +14,8 @@ ul {
     }
 
     &.mona-subtree-list {
-        padding-left: 23px;
-        margin-top: 4px;
-        padding-bottom: 2px;
+        padding-left: 19px;
+        //margin-top: 4px;
+        //padding-bottom: 2px;
     }
 }
