--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
@@ -31,7 +31,7 @@ div.mona-tree-node-content {
 
 div.mona-tree-view-node-text {
     color: var(--mona-text);
-    padding: 0 5px;
+    padding: 5px 5px;
     min-width: 0;
     user-select: none;
     white-space: nowrap;
