--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="wrapper">
     <div class="side-bar">
         <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
-                        [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, checkMode: 'multiple'}"
+                        [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
                         [checkedKeys]="['1-2', '1-3']" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
-                        monaTreeViewExpandable [expandedKeys]="['1-2', '1-3']" (expandedKeysChange)="onTreeExpandedKeysChange($event)">
+                        monaTreeViewExpandable [expandedKeys]="['1-2', '1-3']" (expandedKeysChange)="onTreeExpandedKeysChange($event)"
+                        [monaTreeViewSelectable]="{enabled: true, mode: 'multiple', childrenOnly: true}" [selectedKeys]="['1-2-1', '1-3-2']"
+                        (selectedKeysChange)="onTreeSelectedKeysChange($event)"
+        >
             <ng-template monaTreeViewNodeTextTemplate let-dataItem>
                 <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>
                 <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>
