--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -2,14 +2,24 @@
     <div class="side-bar">
         <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
                         [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
-                        [checkedKeys]="['1-2', '1-3']" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
-                        monaTreeViewExpandable [expandedKeys]="['1-2', '1-3']" (expandedKeysChange)="onTreeExpandedKeysChange($event)"
-                        [monaTreeViewSelectable]="{enabled: true, mode: 'multiple', childrenOnly: true}" [selectedKeys]="['1-2-1', '1-3-2']"
+                        [checkedKeys]="treeCheckedKeys" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
+                        monaTreeViewExpandable [expandedKeys]="treeExpandedKeys" (expandedKeysChange)="onTreeExpandedKeysChange($event)"
+                        [monaTreeViewSelectable]="{enabled: true, mode: 'multiple', childrenOnly: true}" [selectedKeys]="treeSelectedKeys"
                         (selectedKeysChange)="onTreeSelectedKeysChange($event)"
+                        [nodeDisabler]="'disabled'"
+
         >
+<!--            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"-->
             <ng-template monaTreeViewNodeTextTemplate let-dataItem>
-                <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>
-                <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>
+                <span #anchor>
+                    <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>
+                    <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>
+                </span>
+                <mona-contextmenu [target]="anchor">
+                    <mona-menu-item text="AAA" (menuClick)="print(dataItem)"></mona-menu-item>
+                    <mona-menu-item text="BBB"></mona-menu-item>
+                    <mona-menu-item text="CCC" (menuClick)="updateTreeData()"></mona-menu-item>
+                </mona-contextmenu>
             </ng-template>
         </mona-tree-view>
     </div>
