--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.html
@@ -1,10 +1,10 @@
-<div class="mona-tree-view-node">
+<div class="mona-tree-view-node" [ngClass]="{'mona-disabled': node.disabled}">
     <div class="mona-tree-node-expander" (click)="onExpandToggle($event)" [ngClass]="{'mona-interactive': node.nodes.length !== 0}">
         <fa-icon [icon]="expandIcon" *ngIf="node.nodes.length !== 0 && !node.expanded"></fa-icon>
         <fa-icon [icon]="collapseIcon" *ngIf="node.nodes.length !== 0 && node.expanded"></fa-icon>
     </div>
     <div class="mona-tree-node-content">
-        <input type="checkbox" id="mona-tree-node-checkbox-{{node.uid}}" [indeterminate]="node.indeterminate"
+        <input type="checkbox" id="mona-tree-node-checkbox-{{node.uid}}" [indeterminate]="node.indeterminate" [disabled]="node.disabled"
                [ngModel]="node.checked" (ngModelChange)="onCheckToggle($event)" monaCheckBox *ngIf="treeViewService.checkableOptions.enabled">
         <label for="mona-tree-node-checkbox-{{node.uid}}"></label>
         <div class="mona-tree-view-node-text" [ngClass]="{'mona-tree-view-node-selected': node.selected}" (click)="onSelectToggle($event)">
