--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
@@ -1,7 +1,7 @@
 <div class="mona-tree-view">
     <ul class="mona-tree-list">
         <ng-template #treeTemplate let-nodes>
-            <ng-container *ngFor="let node of nodes; let nx = index;">
+            <ng-container *ngFor="let node of nodes; let nx = index; trackBy:nodeTrackBy;">
                 <li class="mona-tree-list-item">
                     <mona-tree-view-node [node]="node" [nodeTextTemplate]="nodeTextTemplate"></mona-tree-view-node>
                     <ul class="mona-subtree-list" *ngIf="node.nodes.length !== 0 && node.expanded">
