Initial drag and drop

--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.html
@@ -1,9 +1,13 @@
-<div class="mona-tree-view-node" [ngClass]="{'mona-disabled': node.disabled}">
-    <div class="mona-tree-node-expander" (click)="onExpandToggle($event)" [ngClass]="{'mona-interactive': node.nodes.length !== 0}">
+<div class="mona-tree-view-node"
+     (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" (mousemove)="onMouseMove($event)">
+    <div class="mona-tree-view-drop-magnet" *ngIf="dragging && dropMagnetVisible && dropPosition==='before'" [attr.data-nid]="node.uid" [attr.data-pos]="'before'">
+        <div></div>
+    </div>
+    <div class="mona-tree-node-expander" (click)="onExpandToggle($event)" [ngClass]="{'mona-interactive': node.nodes.length !== 0, 'mona-disabled': node.disabled}">
         <fa-icon [icon]="expandIcon" *ngIf="node.nodes.length !== 0 && !node.expanded"></fa-icon>
         <fa-icon [icon]="collapseIcon" *ngIf="node.nodes.length !== 0 && node.expanded"></fa-icon>
     </div>
-    <div class="mona-tree-node-content">
+    <div class="mona-tree-node-content"  [ngClass]="{'mona-disabled': node.disabled}">
         <input type="checkbox" id="mona-tree-node-checkbox-{{node.uid}}" [indeterminate]="node.indeterminate" [disabled]="node.disabled"
                [ngModel]="node.checked" (ngModelChange)="onCheckToggle($event)" monaCheckBox *ngIf="treeViewService.checkableOptions.enabled">
         <label for="mona-tree-node-checkbox-{{node.uid}}"></label>
@@ -11,5 +15,8 @@
             <ng-container *ngIf="!nodeTextTemplate">{{node.text}}</ng-container>
             <ng-container [ngTemplateOutlet]="nodeTextTemplate" [ngTemplateOutletContext]="{$implicit: node.data, node: node}" *ngIf="!!nodeTextTemplate"></ng-container>
         </div>
+    </div>
+    <div class="mona-tree-view-drop-magnet" *ngIf="dragging && dropMagnetVisible && dropPosition==='after'" [attr.data-nid]="node.uid"[attr.data-pos]="'after'">
+        <div></div>
     </div>
 </div>
