--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
@@ -1,3 +1,7 @@
+:host {
+    position: relative;
+}
+
 .mona-tree-view-node {
     display: flex;
     height: var(--mona-input-height);
@@ -37,4 +41,24 @@ div.mona-tree-view-node-text {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+div.mona-tree-view-drop-magnet {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    & > div {
+        width: 100%;
+        height: 2px;
+        background-color: var(--mona-primary);
+    }
+    &:first-child {
+        top: 2px;
+    }
+    &:last-child {
+        bottom: 2px;
+    }
 }
