--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
@@ -1,15 +1,20 @@
 <div class="mona-tree-view">
-    <ul class="mona-tree-list">
+    <ul class="mona-tree-list" cdkDropList [cdkDropListSortingDisabled]="true"
+        (cdkDropListDropped)="onNodeDrop($event)">
         <ng-template #treeTemplate let-nodes>
             <ng-container *ngFor="let node of nodes; let nx = index; trackBy:nodeTrackBy;">
-                <li class="mona-tree-list-item">
-                    <mona-tree-view-node [node]="node" [nodeTextTemplate]="nodeTextTemplate"></mona-tree-view-node>
+                <li class="mona-tree-list-item" cdkDrag [cdkDragData]="node" (cdkDragStarted)="onNodeDragStart($event)"
+                    (cdkDragEnded)="onNodeDragEnd($event)" (cdkDragMoved)="onNodeDragMove($event, node)">
+                    <mona-tree-view-node [node]="node" [nodeTextTemplate]="nodeTextTemplate" [dragging]="dragging"
+                                         (dropPositionChange)="onNodeDropPositionChange($event)"></mona-tree-view-node>
                     <ul class="mona-subtree-list" *ngIf="node.nodes.length !== 0 && node.expanded">
-                        <ng-container [ngTemplateOutlet]="treeTemplate" [ngTemplateOutletContext]="{$implicit: node.nodes}"></ng-container>
+                        <ng-container [ngTemplateOutlet]="treeTemplate"
+                                      [ngTemplateOutletContext]="{$implicit: node.nodes}"></ng-container>
                     </ul>
                 </li>
             </ng-container>
         </ng-template>
-        <ng-container [ngTemplateOutlet]="treeTemplate" [ngTemplateOutletContext]="{$implicit: treeViewService.viewNodeList}"></ng-container>
+        <ng-container [ngTemplateOutlet]="treeTemplate"
+                      [ngTemplateOutletContext]="{$implicit: treeViewService.viewNodeList}"></ng-container>
     </ul>
 </div>
