--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
@@ -50,9 +50,13 @@ div.mona-tree-view-drop-magnet {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    & > fa-icon {
+        color: var(--mona-primary);
+    }
     & > div {
-        width: 100%;
+        width: 10%;
         height: 2px;
+        margin-left: 5px;
         background-color: var(--mona-primary);
     }
     &:first-child {
