--- a/projects/mona-ui/styles/mona-dark.scss
+++ b/projects/mona-ui/styles/mona-dark.scss
@@ -9,6 +9,7 @@
     --mona-background-light: #2D2E30;
     --mona-background-lighter: #3E3F41;
     --mona-border-color: #101114;
+    --mona-focus-border-color: darkgray;
     --mona-input-height: 30px;
     --mona-primary: #3949ab;
     --mona-primary-dark: #303f9f;
