Initial tab strip component

--- a/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.html
@@ -1,1 +1,34 @@
-<p>tab-strip works!</p>
+<div class="mona-tab-strip">
+    <div class="mona-tab-strip-tabs">
+        <div class="mona-tab-strip-scroll">
+            <button monaButton (click)="startScrolling(tabListElement, 'left', 'single')"
+                    (mousedown)="startScrolling(tabListElement, 'left', 'continuous')" (mouseup)="stopScrolling()">
+                <fa-icon [icon]="scrollLeftIcon"></fa-icon>
+            </button>
+        </div>
+        <ul class="mona-tab-list" #tabListElement>
+            <li *ngFor="let tab of tabComponents" [ngClass]="{'mona-tab-active': tab.selected, 'mona-disabled': tab.disabled}"
+                (click)="onTabClick(tab, tabListElement)">
+                <div class="mona-tab-title">
+                    <span *ngIf="!tab.titleTemplate">{{tab.title}}</span>
+                    <ng-container [ngTemplateOutlet]="tab.titleTemplate" *ngIf="!!tab.titleTemplate"></ng-container>
+                </div>
+                <button monaButton [flat]="true" [disabled]="tab.disabled" *ngIf="(tab.closable===true) || (closable && tab.closable==null)" class="mona-tab-close" (click)="onTabClose(tab, $event)">
+                    <fa-icon [icon]="tabCloseIcon"></fa-icon>
+                </button>
+            </li>
+        </ul>
+        <div class="mona-tab-strip-scroll">
+            <button monaButton (click)="startScrolling(tabListElement, 'right', 'single')"
+                    (mousedown)="startScrolling(tabListElement, 'right', 'continuous')" (mouseup)="stopScrolling()">
+                <fa-icon [icon]="scrollRightIcon"></fa-icon>
+            </button>
+        </div>
+    </div>
+    <ng-container *ngFor="let tab of tabComponents">
+        <div class="mona-tab-content" [ngClass]="{'mona-tab-hidden': keepTabContent && !tab.selected}"
+             *ngIf="keepTabContent || tab.selected">
+            <ng-container [ngTemplateOutlet]="tab.contentTemplate"></ng-container>
+        </div>
+    </ng-container>
+</div>
