--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -14,13 +14,14 @@ div.wrapper {
 div.side-bar {
     width: 350px;
     height: 100%;
-    border-right: 1px solid var(--mona-border-color);
+    //border-right: 1px solid var(--mona-border-color);
     background: #2C2C2C;
     padding: 20px 10px;
 }
 
 div.content {
-    width: calc(100% - 350px);
+    //width: calc(100% - 350px);
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
