--- a/projects/mona-ui/styles/mona-dark.scss
+++ b/projects/mona-ui/styles/mona-dark.scss
@@ -6,7 +6,7 @@
     --mona-background-dark: #161719;
     --mona-background-darker: #0B0C0E;
     --mona-background-darker-2: #000000;
-    --mona-background-light: #2D2E30;
+    --mona-background-light: #232427;
     --mona-background-lighter: #3E3F41;
     --mona-border-color: #101114;
     --mona-focus-border-color: darkgray;
