Title template and content

--- a/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.html
@@ -1,12 +1,15 @@
 <div class="mona-expansion-panel" [ngClass]="{'collapsed': !expanded}">
     <div class="mona-expansion-panel-header" (click)="expanded=!expanded;">
-        <div class="mona-expansion-panel-header-title">{{title}}</div>
+        <div class="mona-expansion-panel-header-title">
+            <ng-container *ngIf="!titleTemplate">{{title}}</ng-container>
+            <ng-container [ngTemplateOutlet]="titleTemplate" *ngIf="!!titleTemplate"></ng-container>
+        </div>
         <div class="mona-expansion-panel-header-actions">
             <fa-icon [icon]="collapseIcon" *ngIf="expanded"></fa-icon>
             <fa-icon [icon]="expandIcon" *ngIf="!expanded"></fa-icon>
         </div>
     </div>
     <div class="mona-expansion-panel-content" [ngClass]="{'hidden': !expanded}" @slideDownHidden>
-        Content of {{title}}
+        <ng-content></ng-content>
     </div>
 </div>
