--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -292,7 +292,13 @@
                 <mona-tab title="Expansion Panel">
                     <ng-template monaTabContentTemplate>
                         <div style="width: 100%; height: 100%; padding: 20px;">
-                            <mona-expansion-panel title="Panel {{x}}" *ngFor="let x of [1,2,3]"></mona-expansion-panel>
+                            <mona-expansion-panel title="Panel {{x}}" *ngFor="let x of [1,2,3]">
+                                This is the content for panel {{x}}.
+                                <ng-template monaExpansionPanelTitleTemplate>
+                                    <fa-icon [icon]="snowflakeIcon" style="color: powderblue;"></fa-icon>
+                                    <span style="color: snow; margin-left: 5px; font-weight: bold;">Panel {{x}}</span>
+                                </ng-template>
+                            </mona-expansion-panel>
                         </div>
                     </ng-template>
                 </mona-tab>
