--- a/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.html
@@ -5,8 +5,11 @@
             <ng-container [ngTemplateOutlet]="titleTemplate" *ngIf="!!titleTemplate"></ng-container>
         </div>
         <div class="mona-expansion-panel-header-actions">
-            <fa-icon [icon]="collapseIcon" *ngIf="expanded"></fa-icon>
-            <fa-icon [icon]="expandIcon" *ngIf="!expanded"></fa-icon>
+            <ng-container *ngIf="!actionsTemplate">
+                <fa-icon [icon]="collapseIcon" *ngIf="expanded"></fa-icon>
+                <fa-icon [icon]="expandIcon" *ngIf="!expanded"></fa-icon>
+            </ng-container>
+            <ng-container [ngTemplateOutlet]="actionsTemplate" *ngIf="!!actionsTemplate"></ng-container>
         </div>
     </div>
     <div class="mona-expansion-panel-content" [ngClass]="{'hidden': !expanded}" @slideDownHidden>
