--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -312,6 +312,44 @@
 <!--                        {{item}}-->
 <!--                    </ng-template>-->
 <!--                </mona-tab>-->
+                <mona-tab title="Splitter" [selected]="true">
+                    <ng-template monaTabContentTemplate>
+                        <div style="width: 100%; height: 100%;">
+                            <mona-splitter style="height: 100%;" orientation="horizontal">
+                                <mona-splitter-pane [size]="200" [collapsible]="true">
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog</button>
+                                    </div>
+                                </mona-splitter-pane>
+                                <mona-splitter-pane [size]="100">
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog 2</button>
+                                    </div>
+                                </mona-splitter-pane>
+                                <mona-splitter-pane [size]="100">
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog 4</button>
+                                    </div>
+                                </mona-splitter-pane>
+                                <mona-splitter-pane>
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog 4</button>
+                                    </div>
+                                </mona-splitter-pane>
+                                <mona-splitter-pane>
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog 4</button>
+                                    </div>
+                                </mona-splitter-pane>
+                                <mona-splitter-pane [size]="100">
+                                    <div style="width: 100%; height: 100%; padding: 20px;">
+                                        <button monaButton>Open Dialog 4</button>
+                                    </div>
+                                </mona-splitter-pane>
+                            </mona-splitter>
+                        </div>
+                    </ng-template>
+                </mona-tab>
             </mona-tab-strip>
         </div>
 </div>
