--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,37 +1,38 @@
 <div class="wrapper">
-    <div class="side-bar">
-        <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
-                        [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
-                        [checkedKeys]="treeCheckedKeys" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
-                        monaTreeViewExpandable [expandedKeys]="treeExpandedKeys"
-                        (expandedKeysChange)="onTreeExpandedKeysChange($event)"
-                        [monaTreeViewSelectable]="{enabled: true, mode: 'single', childrenOnly: true}"
-                        [selectedKeys]="treeSelectedKeys"
-                        (selectedKeysChange)="onTreeSelectedKeysChange($event)"
-                        (nodeDragStart)="onTreeNodeDragStart($event)"
-                        (nodeDrag)="onTreeNodeDrag($event)"
-                        (nodeDrop)="onTreeNodeDrop($event)"
-                        (nodeDragEnd)="onTreeNodeDragEnd($event)"
-                        (nodeClick)="onTreeNodeClick($event)"
-                        (nodeDoubleClick)="onTreeNodeDoubleClick($event)"
-                        monaTreeViewDisable [disabledKeys]="treeDisabledKeys"
+    <mona-splitter orientation="horizontal">
+        <mona-splitter-pane [size]="300">
+            <mona-tree-view [data]="treeData" textField="text" childrenField="items" keyField="id"
+                            [monaTreeViewCheckable]="{enabled: true, checkChildren: true, checkParents: true, mode: 'multiple'}"
+                            [checkedKeys]="treeCheckedKeys" (checkedKeysChange)="onTreeCheckedKeysChange($event)"
+                            monaTreeViewExpandable [expandedKeys]="treeExpandedKeys"
+                            (expandedKeysChange)="onTreeExpandedKeysChange($event)"
+                            [monaTreeViewSelectable]="{enabled: true, mode: 'single', childrenOnly: true}"
+                            [selectedKeys]="treeSelectedKeys"
+                            (selectedKeysChange)="onTreeSelectedKeysChange($event)"
+                            (nodeDragStart)="onTreeNodeDragStart($event)"
+                            (nodeDrag)="onTreeNodeDrag($event)"
+                            (nodeDrop)="onTreeNodeDrop($event)"
+                            (nodeDragEnd)="onTreeNodeDragEnd($event)"
+                            (nodeClick)="onTreeNodeClick($event)"
+                            (nodeDoubleClick)="onTreeNodeDoubleClick($event)"
+                            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"
 
-        >
-            <!--            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"-->
-            <!--            <ng-template monaTreeViewNodeTextTemplate let-dataItem>-->
-            <!--                <span #anchor>-->
-            <!--                    <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>-->
-            <!--                    <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>-->
-            <!--                </span>-->
-            <!--                <mona-contextmenu [target]="anchor">-->
-            <!--                    <mona-menu-item text="AAA" (menuClick)="print(dataItem)"></mona-menu-item>-->
-            <!--                    <mona-menu-item text="BBB"></mona-menu-item>-->
-            <!--                    <mona-menu-item text="CCC" (menuClick)="updateTreeData()"></mona-menu-item>-->
-            <!--                </mona-contextmenu>-->
-            <!--            </ng-template>-->
-        </mona-tree-view>
-    </div>
-    <div style="width: 100%; height: 100%; overflow: hidden;">
+            >
+                <!--            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"-->
+                <!--            <ng-template monaTreeViewNodeTextTemplate let-dataItem>-->
+                <!--                <span #anchor>-->
+                <!--                    <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>-->
+                <!--                    <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>-->
+                <!--                </span>-->
+                <!--                <mona-contextmenu [target]="anchor">-->
+                <!--                    <mona-menu-item text="AAA" (menuClick)="print(dataItem)"></mona-menu-item>-->
+                <!--                    <mona-menu-item text="BBB"></mona-menu-item>-->
+                <!--                    <mona-menu-item text="CCC" (menuClick)="updateTreeData()"></mona-menu-item>-->
+                <!--                </mona-contextmenu>-->
+                <!--            </ng-template>-->
+            </mona-tree-view>
+        </mona-splitter-pane>
+        <mona-splitter-pane>
             <mona-tab-strip [keepTabContent]="true" [closable]="true" (tabClose)="onTabStripTabClose($event)">
                 <mona-tab [title]="'TAB I'" [closable]="false" [selected]="true">
                     <ng-template monaTabTitleTemplate>
@@ -60,7 +61,6 @@
                             <div>
                                 <button monaButton #popupComponentAnchor>Popup Component Anchor</button>
                                 <mona-popup [anchor]="popupComponentAnchor" trigger="click"
-                                            [width]="popupComponentAnchor.offsetWidth"
                                             [offset]="{vertical: 0.5}"
                                             (close)="onPopupClose()" (open)="onPopupOpen($event)">
                                     <ng-template>
@@ -307,43 +307,37 @@
                         </div>
                     </ng-template>
                 </mona-tab>
-<!--                <mona-tab [title]="item"  *ngFor="let item of dropdownPrimitiveDataItems |slice:0:5; let ix=index;">-->
-<!--                    <ng-template monaTabContentTemplate>-->
-<!--                        {{item}}-->
-<!--                    </ng-template>-->
-<!--                </mona-tab>-->
+                <!--                <mona-tab [title]="item"  *ngFor="let item of dropdownPrimitiveDataItems |slice:0:5; let ix=index;">-->
+                <!--                    <ng-template monaTabContentTemplate>-->
+                <!--                        {{item}}-->
+                <!--                    </ng-template>-->
+                <!--                </mona-tab>-->
                 <mona-tab title="Splitter" [selected]="true">
                     <ng-template monaTabContentTemplate>
                         <div style="width: 100%; height: 100%;">
-                            <mona-splitter style="height: 100%;" orientation="horizontal">
-                                <mona-splitter-pane [size]="200" [collapsible]="true">
+                            <mona-splitter style="height: 100%;" orientation="vertical">
+                                <mona-splitter-pane  [collapsible]="true">
                                     <div style="width: 100%; height: 100%; padding: 20px;">
                                         <button monaButton>Open Dialog</button>
                                     </div>
                                 </mona-splitter-pane>
-                                <mona-splitter-pane [size]="100">
-                                    <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog 2</button>
-                                    </div>
+                                <mona-splitter-pane  [collapsible]="true">
+                                    <mona-splitter orientation="horizontal">
+                                        <mona-splitter-pane [collapsible]="true">
+                                            <div style="width: 100%; height: 100%; padding: 20px;">
+                                                <button monaButton>Open Dialog</button>
+                                            </div>
+                                        </mona-splitter-pane>
+                                        <mona-splitter-pane >
+                                            <div style="width: 100%; height: 100%; padding: 20px;">
+                                                <button monaButton>Open Dialog</button>
+                                            </div>
+                                        </mona-splitter-pane>
+                                    </mona-splitter>
                                 </mona-splitter-pane>
-                                <mona-splitter-pane [size]="100">
+                                <mona-splitter-pane  [collapsible]="true">
                                     <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog 4</button>
-                                    </div>
-                                </mona-splitter-pane>
-                                <mona-splitter-pane>
-                                    <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog 4</button>
-                                    </div>
-                                </mona-splitter-pane>
-                                <mona-splitter-pane>
-                                    <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog 4</button>
-                                    </div>
-                                </mona-splitter-pane>
-                                <mona-splitter-pane [size]="100">
-                                    <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog 4</button>
+                                        <button monaButton>Open Dialog</button>
                                     </div>
                                 </mona-splitter-pane>
                             </mona-splitter>
@@ -351,7 +345,9 @@
                     </ng-template>
                 </mona-tab>
             </mona-tab-strip>
-        </div>
+        </mona-splitter-pane>
+    </mona-splitter>
+
 </div>
 
 <ng-template #popupContentTemplate>
