resizable input for splitter

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -322,20 +322,22 @@
                                     </div>
                                 </mona-splitter-pane>
                                 <mona-splitter-pane  [collapsible]="true">
+
                                     <mona-splitter orientation="horizontal">
                                         <mona-splitter-pane [collapsible]="true">
                                             <div style="width: 100%; height: 100%; padding: 20px;">
                                                 <button monaButton>Open Dialog</button>
                                             </div>
                                         </mona-splitter-pane>
-                                        <mona-splitter-pane >
+                                        <mona-splitter-pane>
                                             <div style="width: 100%; height: 100%; padding: 20px;">
                                                 <button monaButton>Open Dialog</button>
                                             </div>
                                         </mona-splitter-pane>
                                     </mona-splitter>
+
                                 </mona-splitter-pane>
-                                <mona-splitter-pane  [collapsible]="true">
+                                <mona-splitter-pane  [collapsible]="true" [resizable]="false">
                                     <div style="width: 100%; height: 100%; padding: 20px;">
                                         <button monaButton>Open Dialog</button>
                                     </div>
