--- a/projects/mona-ui/src/lib/layout/modules/splitter/components/splitter-resizer/splitter-resizer.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/splitter/components/splitter-resizer/splitter-resizer.component.scss
@@ -8,24 +8,39 @@ div.mona-splitter-resizer {
     & fa-icon {
         opacity: 0.6;
     }
+    & > fa-icon {
+        margin: 5px;
+    }
 
     &.vertical {
         width: 100%;
-        height: 8px;
+        height: 5px;
         cursor: row-resize;
         border-top: 1px solid var(--mona-border-color);
         border-bottom: 1px solid var(--mona-border-color);
         background: var(--mona-background);
+        & div.mona-splitter-collapse[data-pos='prev'] {
+            margin-top: 1px;
+        }
+        & div.mona-splitter-collapse[data-pos='next'] {
+            margin-bottom: 1px;
+        }
     }
 
     &.horizontal {
-        width: 8px;
+        width: 5px;
         height: 100%;
         cursor: col-resize;
         border-left: 1px solid var(--mona-border-color);
         border-right: 1px solid var(--mona-border-color);
         background: var(--mona-background);
         flex-direction: column;
+        & div.mona-splitter-collapse[data-pos='prev'] {
+            margin-left: 1px;
+        }
+        & div.mona-splitter-collapse[data-pos='next'] {
+            margin-right: 1px;
+        }
     }
 
 }
@@ -37,6 +52,5 @@ div.mona-splitter-collapse {
     justify-content: center;
     & fa-icon {
         font-size: 8px;
-        margin: 5px;
     }
 }
