--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1,4 +1,17 @@
 @import '~@angular/cdk/overlay-prebuilt.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    :root {
+        --primary: 243 244 245;
+        --secondary: 234 237 240;
+        --background: 23 24 27;
+        --border: 14 16 19;
+        --text: 187 190 192;
+    }
+}
 
 *,
 *::before,
@@ -16,8 +29,10 @@
     color: var(--mona-text) !important;
 }
 
+
+
 input {
-    font-size: 12px;
+    //font-size: 12px;
 }
 
 @mixin active-background {
