--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -277,7 +277,6 @@
                                                        [(ngModel)]="numericTextBoxValue"
                                                        [formatter]="numericTextBoxFormatter"
                                                        style="margin-top: 10px; width: 200px;"></mona-numeric-text-box>
-
                             </div>
 
                             <div>
@@ -286,6 +285,15 @@
                                                    (ngModelChange)="onColorPickerValueChange($event)"
                                                    style="margin-left: 30px;"></mona-color-picker>
                             </div>
+
+                            <div>
+                                <mona-stepper [steps]="stepperSteps" [step]="1" (stepChange)="onStepperStepChange($event)" [linear]="true" style="width: 600px;">
+                                    <ng-template monaStepperLabelTemplate let-step let-index="index">
+                                        <span style="color: deeppink; text-decoration: underline;">{{index}}. {{step.label}}</span>
+                                    </ng-template>
+                                </mona-stepper>
+                            </div>
+
                         </div>
                     </ng-template>
                 </mona-tab>
